--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container-fluid">
+  <%= yield %>
+</div>
 
-<%= yield %>
 <%= debug(params) if Rails.env.development? %>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<%= javascript_include_tag "transform" %>
+<%= javascript_include_tag "knobKnob.jquery" %>
+<%= javascript_include_tag "jquery.cassette" %>
+<script type="text/javascript">
+    $(function() {
+        $( '#vc-container' ).cassette();
+    });
+</script>
 </body>
 </html>
