--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
   <%= yield %>
 </div>
 
-<%= debug(params) if Rails.env.development? %>
+
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <%= javascript_include_tag "transform" %>
 <%= javascript_include_tag "knobKnob.jquery" %>
