--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,17 +1,18 @@
-<div id="vc-container" class="vc-container">
-  <div class="vc-tape-wrapper">
-    <div class="vc-tape">
-      <div class="vc-tape-back">
-        <div class="vc-tape-wheel vc-tape-wheel-left"><div></div></div>
-        <div class="vc-tape-wheel vc-tape-wheel-right"><div></div></div>
-      </div>
-      <div class="vc-tape-front vc-tape-side-a">
-        <span>A</span>
-      </div>
-      <div class="vc-tape-front vc-tape-side-b">
-        <span>B</span>
-      </div>
-    </div>
+<div class="row">
+  <%=render ('cassette_player') %>
+</div>
+<div class="col-sm-8 col-sm-offset-2">
+  <% unless current_user.nil?%>
+      <%=render('form')%>
+  <%else%>
+      <%=render('login_link')%>
+  <%end%>
+
+  <div id="flash">
+    <%=render ('shared/flash_alert')%>
   </div>
-  <div class="vc-loader"></div>
-</div><!-- //vc-container -->
+  <div id="messages">
+    <%=render @messages%>
+  </div>
+</div>
+
