--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,3 @@
-
 form{
   text-align: center;
   textarea{
@@ -27,6 +26,11 @@ p{
 
 #flash{
   display: none;
+  position: fixed;
+  right: 0;
+  top: 135px;
+  width: 366px;
+  font-size: 18px;
 }
 
 #facebook_loggin_button{
@@ -53,10 +57,48 @@ p{
 
 }
 .well.row{
-  padding: 19px 19px 8px 19px;
+  padding: 19px 19px 8px 5px;
 }
 
 h3 form{
   display: inline-block;
   margin-left: 30px;
+}
+
+.replies{
+  margin-left: 50px;
+  overflow: visible;
+}
+
+.reply_form{
+  padding-top: 20px;
+  margin-left: 34px;
+
+}
+
+.triangle-show{
+   cursor: pointer;
+   width: 0;
+   height: 0;
+   margin-top: 36px;
+   margin-left: -43px;
+   border-style: solid;
+   border-width: 10px 10px 0 10px;
+   border-color: #4981bd transparent transparent transparent;
+ }
+
+.triangle-hide{
+  display: none;
+  cursor: pointer;
+  width: 0;
+  height: 0;
+  margin-top: 36px;
+  margin-left: -43px;
+  border-style: solid;
+  border-width: 10px 0 10px 12px;
+  border-color: transparent transparent transparent #4981bd;
+}
+
+.replies .replies .replies .message, .replies .replies .replies .replies .message {
+ padding-left: 50px;
 }
