--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,18 +1,13 @@
-<div class="row">
-  <h3>What do u think?
-    <span class="pull-right">
-    <%= button_to 'Logout', sign_out_path, method: "delete", class: 'btn fa fa-sign-out btn btn-success'%>
-  </span>
-  </h3>
+<%= form_for @message, remote: true do |f|%>
+    <%= f.hidden_field(:parent_id, value: @parent_id) %>
+    <%= f.hidden_field(:user_id, value: current_user.id) %>
 
-  <%= form_for @message, remote: true do |f|%>
-      <%= render "shared/error_messages", object: f.object %>
-      <div class="col-sm-1 ">
-        <%=image_tag avatar_get(current_user), class:'default-avatar'  %>
-      </div>
-      <div class="col-sm-10 col-sm-offset-1">
-        <%= f.text_area :content %>
-      </div>
-      <%= f.submit 'Post', class: "btn btn-large btn-primary pull-right post" %>
-  <%end%>
-</div>
+    <%= render "shared/error_messages", object: f.object %>
+    <div class="col-sm-1 ">
+      <%=image_tag avatar_get(current_user), class:'default-avatar'  %>
+    </div>
+    <div class="col-sm-10 col-sm-offset-1">
+      <%= f.text_area :content %>
+    </div>
+    <%= f.submit 'Post', class: "btn btn-large btn-primary pull-right post" %>
+<%end%>
