--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,6 @@
+body{
+  min-width: 675px;
+}
 form{
   text-align: center;
   textarea{
@@ -34,7 +37,6 @@ p{
 }
 
 #facebook_loggin_button{
-    width: 20%;
     margin-top: 21%;
     font-size: 16px;
     font-weight: bold;
