--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -3,10 +3,10 @@
     <%= f.hidden_field(:user_id, value: current_user.id) %>
 
     <%= render "shared/error_messages", object: f.object %>
-    <div class="col-sm-1 ">
+    <div class="col-xs-1 col-sm-1 ">
       <%=image_tag avatar_get(current_user), class:'default-avatar'  %>
     </div>
-    <div class="col-sm-10 col-sm-offset-1">
+    <div class=" col-xs-10 col-sm-10 col-xs-offset-1 col-sm-offset-1">
       <%= f.text_area :content %>
     </div>
     <%= f.submit 'Post', class: "btn btn-large btn-primary pull-right post" %>
